css/main.css
html {
  --main-bg-color: royalblue;
  --tert-bg-color: mediumblue;
  --main-accent-color: snow;
  --title-font: 'Montserrat', sans-serif;
  --desc-font: 'Raleway', sans-serif;
}

body {
  background-color: var(--main-accent-color);
  font-family: var(--desc-font);
}

object {
  pointer-events: none;
}

a {
  text-decoration: none;
  color: #000;
}

.title {
  font-family: var(--title-font);
}

.wrapper {
  overflow-x: hidden;
  display: grid;
  grid-template-rows: 3em auto 1fr 3em;
  grid-template-areas:
    "header"
    "main"
    "sidebar"
    "footer";
}

/*
====================================
         HEADER NAVBAR
====================================
*/

#navbar-header {
  height: 100%;
  width: 100%;
  grid-area: header;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: var(--main-bg-color);
}

#logo-div {
  width: 20%;
  margin-left: 50%;
  transform: translateX(-75%);
}

.navbar-div {
  padding: 0.5em;
}

#search-div {
  width: 7%;
}

#dd-menu-div {
  width: 8%;
}

.navbar-txt-item {
  display: none;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  color: var(--main-accent-color);
  font-size: 1.3em;
  transition: opacity 0.3s ease-in-out;
}

.navbar-txt-item:hover {
  opacity: 0.6;
}

#dd-menu-pullout-menu {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: var(--main-accent-color);
  color: var(--main-bg-color);
  left: 100%;
  width: 90%;
  height: 100%;
  z-index: 10;
  transition: left 0.3s ease-in-out;
}

.menu-item {
  color: var(--main-bg-color);
  padding: 1em;
  font-size: 2em;
  text-decoration: none;
  transition: color 0.3s ease-in-out;
}

#x-mark-pullout-menu {
  padding-bottom: 0;
  margin-left: auto;
}

#home-btn-pullout-menu {
  padding-top: 0;
}

.menu-item:hover {
  color: var(--tert-bg-color);
}

/*
====================================
             MAIN PG
====================================
*/

#index-welcome {
  text-align: center;
  width: 100%;
  background-image: url("../img/index_welcome_bg.png");
  background-size:100% auto;
  color: var(--main-accent-color);
  text-shadow: 4px 4px #000;
  padding-top: 7.5em;
  padding-bottom: 0.5em;
}

#welcome-text {
  margin-bottom: 0.25em;
}

#main-desc {
  padding: 2em;
  padding-top: 0.25em;
  padding-bottom: 0em;
  text-align: justify;
}

#amazing-btn {
  display: block;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  color: var(--main-accent-color);
  padding: 0.75em;
  background-color: var(--main-bg-color);
  font-family: var(--title-font);
  border-radius: 2em;
  margin: auto;
  width: 80%;
  font-size: 0.9em;
  transition: background-color 0.3s ease-in-out;
}

#amazing-btn:hover {
  background-color: var(--tert-bg-color);
}

#card-holder {
  display: grid;
  justify-items: center;
  width: 100%;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(3, 1fr);
  margin-bottom: 1em;
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 80%;
  margin: auto;
  margin-bottom: 2em;
  margin-left: 2em;
  margin-right: 2em;
}

.card-img {
  width: 100%;
}

.card:hover {
  opacity: 0.6;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.container {
  padding: 2px 8px;
}

.card-text {
  margin: 0.5em;
}

/*
====================================
           RECIPE PG
====================================
*/

ul {
  padding-left: 0;
}

li {
  list-style-type: none;
  margin: 0 0 0.5em 0;
}

.later-recipe-img {
  width: 100%;
  margin: auto;
}

.recipe-ing {
  margin-top: 0.5em;
}

.recipe-steps {
  margin-bottom: 0;
}

.recipe-step-img {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.beginning-desc {
  padding: 2em;
  padding-top: 0.25em;
  padding-bottom: 0em;
  text-align: justify;
}

#recipe-first-line {
  margin-bottom: 0.25em;
}

#recipe-second-line {
  margin-top: 0em;
}

#last-step {
  padding-bottom: 1em;
}

/*
====================================
             HELP PG
====================================
*/

#cm-btn {
  color: var(--main-bg-color);
}

#faq-title {
  font-size: 2em;
}

/*
====================================
            SEARCH PG
====================================
*/

.main-desc-search {
  padding-bottom: 1em !important;
}

#spacing-div-search-no-results {
  width: 80%;
  position: absolute;
  top: 50%; left: 50%;
  transform: translate(-50%,-50%);
}

#searchbar-div {
  display: flex;
  align-items: center;
  padding: 0.5em;
  padding-top: 0em;
      padding-bottom: 0.75em;
  background-color: var(--main-bg-color);
}

#filter-icon {
  width: 5%;
  height: 5%;
  padding-left: 0.5em;
  padding-right: 1em;
}

#searchbar-div input[type=text] {
  width: 20px;
  color: var(--main-accent-color);
  border: none;
  border-bottom: 2px solid var(--main-accent-color);
  font-size: 16px;
  background-color: #00000000;
  background-image: url('../img/search.png');
  background-position: 6px 8px;
  background-size: 16px 16px;
  background-repeat: no-repeat;
  padding: 6px;
  padding-left: 32px;
  transition: all 0.4s ease-in-out;
}

#searchbar-div input[type=text]:focus {
  color: #000;
  width: 120%;
  background-color: var(--main-accent-color);
}

.filter-ul li {
  display: inline-block;
  color: var(--main-bg-color);
  background-color: var(--main-accent-color);
  padding: 0.5em;
  transition: all 0.3s ease-in-out;
}

.filter-ul li:hover {
  opacity: 0.6;
}

#filters-options {
  color: var(--main-accent-color);
  background-color: var(--main-bg-color);
  width: 100%;
  padding-top: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  position: fixed;
  top: -50%;
  transition: all 0.3s ease-in-out;
}

#filters-options h4 {
  margin: 0;
}

/*
====================================
         FOOTER NAVBAR
====================================
*/

#navbar-footer {
  color: var(--main-accent-color);
  padding-left: 1em;
  background-color: var(--main-bg-color);
  grid-area: footer;
  align-items: center;
}

